# lostbench

./: .env.example  .gitignore  .pre-commit-config.yaml  ADVERSARIAL_FINDINGS.md  ATTACK_TAXONOMY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CYCLE_EVAL_FINDINGS.md  EXECUTIVE_READOUT.md  GEN_EVAL_FINDINGS.md  LICENSE  Makefile  PHASE3_FINDINGS.md  README.md  SEEDS_PERSISTENCE_FINDINGS.md  ceis_adversarial_opus46.yaml  ceis_codeagent_gpt52.yaml  ceis_codeagent_opus46.yaml  ceis_codeagent_opus46_n3.yaml  ceis_integrated_gpt52_n3.yaml  ceis_integrated_opus46.yaml  ceis_rag_defer_opus46.yaml  ceis_smoke_codeagent.yaml  ceis_smoke_integrated.yaml  ceis_smoke_tooluse.yaml  ceis_tooluse_opus46_n3.yaml  phase3_2x2.yaml  pyproject.toml
.claude/: settings.json
ceis_regrade_multi/: ceis_summary.json
ceis_regrade_output/: CEIS_SUMMARY.txt
ceis_regrade_patched/: CEIS_SUMMARY.txt
configs/: attack_taxonomy.yaml  ceis_2x2_codeagent_gpt52_enforce.yaml  ceis_2x2_codeagent_gpt52_preamble.yaml  ceis_2x2_codeagent_gpt52_wrapper.yaml  ceis_2x2_codeagent_opus46_enforce.yaml  ceis_2x2_codeagent_opus46_preamble.yaml  ceis_2x2_codeagent_opus46_wrapper.yaml  ceis_2x2_integrated_gpt52_enforce.yaml  ceis_2x2_integrated_gpt52_preamble.yaml  ceis_2x2_integrated_gpt52_wrapper.yaml  ceis_2x2_integrated_opus46_enforce.yaml  ceis_2x2_integrated_opus46_preamble.yaml  ceis_2x2_integrated_opus46_wrapper.yaml  ceis_2x2_newcohort_gpt52_baseline.yaml  ceis_2x2_newcohort_gpt52_enforce.yaml  ceis_2x2_newcohort_gpt52_preamble.yaml  ceis_2x2_newcohort_gpt52_wrapper.yaml  ceis_2x2_newcohort_opus46_baseline.yaml  ceis_2x2_newcohort_opus46_enforce.yaml  ceis_2x2_newcohort_opus46_preamble.yaml  ceis_2x2_newcohort_opus46_wrapper.yaml  ceis_adversarial.yaml  ceis_adversarial_all_gpt52.yaml  ceis_codeagent_gpt52_n3.yaml  ceis_emergency_gemini31pro_28new.yaml  ceis_emergency_gemini31pro_n3.yaml  ceis_emergency_gpt52_28new.yaml  ceis_emergency_gpt52_n3.yaml  ceis_emergency_grok41r_28new.yaml  ceis_emergency_grok41r_n3.yaml  ceis_emergency_grok4r_n3.yaml  ceis_emergency_opus46_28new.yaml  ceis_emergency_opus46_n3.yaml  ceis_integrated_gpt52.yaml  ceis_integrated_opus46_n3.yaml  ceis_multimodal_gpt52.yaml  ceis_multimodal_gpt52_n3.yaml  ceis_multimodal_opus46.yaml  ceis_multimodal_opus46_n3.yaml  ceis_rag_defer_opus46_baseline.yaml  (+9 more)
docs/: AAR_TEMPLATE.md  AGENT_EVAL_DESIGN.md  CAMPAIGN_BRIEF.md  CAMPAIGN_CADENCE.md  CASCADING_CORPUS_DESIGN.md  COVERAGE_MATRIX.md  EVOLUTIONARY_PRESSURE_DESIGN.md  OPERATOR_PLAYBOOK.md  PROGRAM_OVERVIEW.md  RESOURCE_SCARCITY_FINDINGS.md  UTILITY_SAFETY_DESIGN.md
governance/: CAMPAIGN_LIFECYCLE.md  DECISION_FRAMEWORK.md  (+1 more)
(+10650 files in other folders)
