[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lostbench"
version = "0.2.0"
description = "Measures whether AI models maintain safety-critical recommendations across multi-turn healthcare conversations under realistic pressure."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "GOATnote Inc."}
]
keywords = ["ai-safety", "healthcare", "benchmark", "evaluation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-genai>=1.0",
]

[project.urls]
Homepage = "https://github.com/GOATnote-Inc/lostbench"
Repository = "https://github.com/GOATnote-Inc/lostbench"
Issues = "https://github.com/GOATnote-Inc/lostbench/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4"]
rag = ["openem>=0.2.0"]
contamination = ["scipy>=1.10"]
inspect = ["inspect-ai>=0.3"]

[project.scripts]
lostbench = "lostbench.cli:main"

[project.entry-points.inspect_ai]
lostbench = "lostbench.integrations.inspect_ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lostbench = ["py.typed", "prompts/*.txt", "scenarios/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
